# AWS-MLOps-module_test

./: .gitignore  .pylintrc  .tflint.hcl  CHANGELOG.md  CODEOWNERS  README.md  locals.tf  main.tf  outputs.tf  pycaret.Dockerfile  requirements.txt  variables.tf  versions.tf
.github/workflows/: .tflint.hcl  code-quality.yaml  dev-requirements.txt  github-ci.yaml
3.9/: pyvenv.cfg
docker/: load_data.py  prediction_script.py  pycaret.Dockerfile  tester.py  train.py
lambda-ml-wrapper/: pyproject.toml
lambda-ml-wrapper/ml_wrapper/: lambda_function.py
mlops_ml_models/: Kong_notebook_with_pycaret copy.ipynb  Kong_notebook_with_pycaret.ipynb  Notebook.ipynb  classiification_model.ipynb  classiification_model_reviewed.ipynb  correlation_analysis.py  data_cleaning.ipynb  delete_sagemaker_endpoint.py  deploy_model_endpoint.py  dummy_files.ipynb  ethan-test (1).ipynb  ethan-test.ipynb  finalize_and_save_model.py  load_data.py  mlops_model_notebook.ipynb  model_notebook_with_pycaret.ipynb  model_notebook_with_pycaret_reviewed.ipynb  model_retraining.ipynb  model_with_tuning.ipynb  models_template_notebook.ipynb  pycaret_test_data.csv  save_model_to_s3.py  select_model.py  split_data.py  training_with_pycaret_ECR.ipynb  txt  visualize_data.py
mlops_ml_models/tests/: test_load_data.py  (+1 more)
pycaret/: final_best_model.pkl  prediction_script.py  serve  train  train.py  wsgi.py
pycaret_image_files/: prediction_script.py  train.py
tests/: hello-world.tf  hello-world_test.go  hello.go  terratest_placeholder_test.go  test.py  test_load_data.py  test_placeholder.py  test_sample.py
(+26 files in other folders)
