[tool.poetry]
name = "tfl-ml-wrapper"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pandas = "^1.4.2"
confluent-kafka = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.941"
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}
types-requests = "^2.27.14"
types-urllib3 = "^1.26.11"
boto3 = "^1.21.39"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
